# rdftab.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  round-trip.py
.github/workflows/: rust.yml
src/: main.rs  prefix.sql  turtle.sql
test/: example.owl  example.sql  prefix.sql
