[package]
name = "rdftab"
version = "0.1.0"
authors = ["James A. Overton <james@overton.ca>"]
edition = "2018"

[dependencies]
rio_api = "0.4.2"
rio_xml = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[patch.crates-io]
rio_xml = { git = "https://github.com/ontodev/rio", branch = "master" }
