[package]
name = "rdftab"
version = "0.1.0"
authors = ["James A. Overton <james@overton.ca>"]
edition = "2018"

[dependencies]
oxiri = "0.1.1"
phf = { version = "0.8", features = ["macros"] }
regex = "1.5"

# TODO: Change to 0.5.3 and remove the hard-coded reference to ontodev's fork of rio, using
# the patch.crates-io directive that is commented out below instead.
#rio_api = "0.4.2"
#rio_xml = "0.4.2"
rio_api = { git = "https://github.com/ontodev/rio", branch = "merge-upstream-ws-changes" }
rio_xml = { git = "https://github.com/ontodev/rio", branch = "merge-upstream-ws-changes" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

#[patch.crates-io]
#rio_xml = { git = "https://github.com/ontodev/rio", branch = "master" }
